fix: corregir issues de SonarCloud y ampliar cobertura de tests del controlador